[gd_scene load_steps=21 format=3 uid="uid://b13o5dmyfe7mr"]

[ext_resource type="Script" path="res://Scripts/phone.gd" id="1_8vxnv"]
[ext_resource type="FontFile" uid="uid://v3swnsgchgpo" path="res://Font/BebasNeue-Regular.ttf" id="2_e7bua"]
[ext_resource type="Texture2D" uid="uid://b85egdkunfs0n" path="res://Sprites/DD-press.png" id="4_5g2d6"]
[ext_resource type="Texture2D" uid="uid://jkohu7ytkqxj" path="res://Sprites/DD.png" id="5_70ljt"]
[ext_resource type="StyleBox" uid="uid://ub42qm0fxo4a" path="res://StyleBoxes/Blackout.tres" id="6_g2qqh"]
[ext_resource type="AudioStream" uid="uid://cm847n4k4d0bi" path="res://SFX/negative.mp3" id="7_62ajy"]
[ext_resource type="Texture2D" uid="uid://bd5q5v18e7oif" path="res://Sprites/ddscreen.png" id="7_tv1ot"]
[ext_resource type="StyleBox" uid="uid://clf2pqy6fjxi0" path="res://StyleBoxes/WhiteIn.tres" id="8_5ewob"]
[ext_resource type="AudioStream" uid="uid://dby1rof5s3mqv" path="res://SFX/Phone click.wav" id="8_yxj5d"]
[ext_resource type="FontFile" uid="uid://ydwn4indox68" path="res://Font/Bangers-Regular.ttf" id="9_jflyc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4f3s0"]
bg_color = Color(0.884456, 0.912817, 0.936164, 1)
border_width_left = 6
border_width_top = 8
border_width_right = 6
border_width_bottom = 8
border_color = Color(0.223529, 0.219608, 0.258824, 0.94902)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a4tn0"]
bg_color = Color(0.895364, 0.921073, 0.942248, 1)
border_width_left = 6
border_width_top = 8
border_width_right = 6
border_width_bottom = 8
border_color = Color(0.0173, 0.017, 0.02, 0.529412)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3iqji"]
content_margin_left = 5.0
content_margin_top = 8.0
content_margin_right = 5.0
content_margin_bottom = 0.0
bg_color = Color(0.099986, 0.099986, 0.099986, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.0962048, 0.0962047, 0.0962047, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="FontVariation" id="FontVariation_f0o50"]
base_font = ExtResource("2_e7bua")
variation_embolden = -0.25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dhba8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0bp3c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lmqvn"]
texture = ExtResource("5_70ljt")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bfdas"]
texture = ExtResource("4_5g2d6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u3tqw"]
texture = ExtResource("5_70ljt")
modulate_color = Color(0.886275, 0.886275, 0.886275, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_13gf4"]
texture = ExtResource("7_tv1ot")
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Phone" type="Panel"]
offset_left = 1075.0
offset_top = 583.0
offset_right = 1208.0
offset_bottom = 776.0
pivot_offset = Vector2(133, 136)
theme_override_styles/panel = SubResource("StyleBoxFlat_4f3s0")
script = ExtResource("1_8vxnv")

[node name="Screen" type="Panel" parent="."]
self_modulate = Color(0.188235, 0.188235, 0.188235, 1)
layout_mode = 0
offset_right = 133.0
offset_bottom = 194.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a4tn0")

[node name="Scrollbox" type="ScrollContainer" parent="Screen"]
layout_mode = 0
offset_left = 10.0
offset_top = 19.0
offset_right = 462.0
offset_bottom = 635.0
scale = Vector2(0.25, 0.25)
mouse_filter = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_3iqji")
horizontal_scroll_mode = 0

[node name="Order_List" type="VBoxContainer" parent="Screen/Scrollbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_constants/separation = 25

[node name="Notification" type="Label" parent="Screen"]
top_level = true
layout_mode = 0
offset_left = 927.0
offset_top = 547.0
offset_right = 1353.0
offset_bottom = 594.0
scale = Vector2(0.75, 0.9)
pivot_offset = Vector2(215.557, 23.8314)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.309804, 0.0745098, 0.0745098, 0.552941)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.584314)
theme_override_constants/line_spacing = -2
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = SubResource("FontVariation_f0o50")
theme_override_font_sizes/font_size = 30
text = "You forgot to pickup the order!"
horizontal_alignment = 1

[node name="DD Logo" type="Button" parent="."]
modulate = Color(0.968627, 0.968627, 0.968627, 0.505882)
layout_mode = 0
offset_left = 60.0
offset_top = 172.521
offset_right = 182.0
offset_bottom = 294.521
scale = Vector2(0.125, 0.125)
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_dhba8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0bp3c")
theme_override_styles/hover = SubResource("StyleBoxTexture_lmqvn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_bfdas")
theme_override_styles/normal = SubResource("StyleBoxTexture_u3tqw")

[node name="Blackout" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/disabled = ExtResource("8_5ewob")
theme_override_styles/hover = SubResource("StyleBoxTexture_13gf4")
theme_override_styles/pressed = ExtResource("8_5ewob")
theme_override_styles/normal = ExtResource("6_g2qqh")
toggle_mode = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-25, -236)

[node name="Phone Bad Ding" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_62ajy")
volume_db = -4.0
bus = &"SFX"

[node name="Phone Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_yxj5d")
volume_db = -4.0
bus = &"SFX"

[node name="ActiveOrderTimer" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.65098)
layout_mode = 0
offset_left = 6.2639
offset_top = 6.09152
offset_right = 126.264
offset_bottom = 53.0915
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.827451)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("9_jflyc")
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="DD Logo" to="." method="_phone_off"]
[connection signal="button_up" from="Blackout" to="." method="_phone_on"]
